--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -10,3 +10,9 @@ block head
     - var pageTitle = 'Index Page';
 
 block content
+  +services()
+  +advantages()
+  +packages()
+  +reviews()
+  +partners()
+  +news()
