--- a/src/shared/sass/elements.sass
+++ b/src/shared/sass/elements.sass
@@ -16,3 +16,43 @@
     width: 180px
     height: 1px
     background-color: $color
+
+.main-title
+  margin: 0
+  font-weight: 900
+  font-size: 73px
+  text-transform: uppercase
+  line-height: 0.8
+  @media (max-width: $md)
+    font-size: 62px
+  @media (max-width: $sm)
+    font-size: 46px
+  &-second
+    margin: 0
+    font-size: 31px
+    text-transform: uppercase
+    font-weight: 400
+    @media (max-width: $md)
+      font-size: 28px
+    @media (max-width: $sm)
+      font-size: 24px
+
+.title
+  margin-bottom: 0
+  font-size: 34px
+  text-transform: uppercase
+  font-weight: 900
+
+.circle1
+  position: absolute
+  width: 451px
+  height: 451px
+  border: 75px solid #ffffff
+  border-radius: 50%
+
+.circle2
+  position: absolute
+  width: 611px
+  height: 611px
+  border: 105px solid #ffffff
+  border-radius: 50%
