--- a/src/shared/sass/mixin.sass
+++ b/src/shared/sass/mixin.sass
@@ -52,7 +52,8 @@
   padding: 0
   margin: 0
 
-=btn
-  background-color: transparent
-  border: none
+=btn($bg: transparent, $border: none)
+  text-decoration: none
+  background-color: $bg
+  border: $border
   cursor: pointer
