--- a/src/shared/sass/style.sass
+++ b/src/shared/sass/style.sass
@@ -7,11 +7,13 @@ body
 .root
   display: flex
   flex-direction: column
+  max-width: 100%
   min-height: 100vh
   font-family: $gilroy
   color: $main
-  font-size: 14px
+  font-size: 16px
   background-color: #f6f4f9
+  overflow: hidden
 
 .main
   flex-grow: 1
