--- a/src/components/footer/footer.sass
+++ b/src/components/footer/footer.sass
@@ -1,1 +1,31 @@
+@import "../../shared/sass/imports"
+
 .footer
+  font-size: 15px
+  line-height: 2
+  &-wrap
+    padding: 60px 0
+    color: #ffffff
+    background-color: #1b1b1b
+  &__item
+    display: flex
+    flex-direction: column
+    align-items: flex-start
+  &__link
+    color: inherit
+    text-decoration: none
+    &:hover
+      color: $orange
+  &__social
+    padding: 10px
+    &:hover
+      opacity: 0.5
+  &__icon
+    width: 30px
+    padding-right: 10px
+  &__contacts
+    margin-bottom: 30px
+    font-weight: 800
+    font-size: 18px
+    @media (max-width: $md)
+      margin-top: 50px
