--- a/src/components/index/partners/partners.sass
+++ b/src/components/index/partners/partners.sass
@@ -1,2 +1,22 @@
+@import "../../../shared/sass/imports"
+
 .partners
-	display: block
+  padding-right: 100px
+  @media (max-width: $xl)
+    padding-right: 0
+  &-wrap
+    padding: 50px 0
+    background-color: #fff
+  &__title
+    min-width: 310px
+    margin: 0
+    padding-right: 20px
+  &__item
+    padding-right: 30px
+  &__slider
+    max-width: calc(100% - 40px)
+    margin-top: 20px
+  &__next
+    top: 50%
+    left: 100%
+    transform: translateY(-50%)
