--- a/src/components/index/services/services.pug
+++ b/src/components/index/services/services.pug
@@ -1,3 +1,46 @@
 mixin services()
-	+b.services
-		block
+  section.services-wrap
+    .container
+      +b.services
+        +e.text
+          h2.title Lorem ipsum dolor sit amet
+          +e.text-desc
+            p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            p Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+          .d-flex.justify-content-end
+            a.btn.btn-orange(href='#') подробнее
+        +e.main
+          +e('img').bg(src='assets/images/bg/bg-services-dots.png')
+          +e.main-content
+            h2.title.mt0.mb25 Наши услуги
+            .d-flex.flex-wrap
+              -
+                var items = [
+                  {
+                    one: 'Регистрация',
+                    two: 'фирм'
+                  },
+                  {
+                    one: 'Ведение',
+                    two: 'бухгалтерии'
+                  },
+                  {
+                    one: 'Зарплата и',
+                    two: 'кадры фирм'
+                  },
+                  {
+                    one: 'Профессиональные',
+                    two: 'консультации'
+                  }
+                ]
+              each item, index in items
+                - var i = index + 1
+                +e.item
+                  +e.img
+                    +e('img').img-white(src=`assets/images/icons/services/icon-services-white${i}.png`)
+                    +e('img').img-black(src=`assets/images/icons/services/icon-services-black${i}.png`)
+                  +e('span').item-title #{item.one} <br> #{item.two}
+                  +e.item-hover
+                    span Ведение ООО
+                    span Ведение ИП
+                    span Нулева отчетность
