--- a/src/components/index/services/services.sass
+++ b/src/components/index/services/services.sass
@@ -1,2 +1,86 @@
+@import "../../../shared/sass/imports"
+
 .services
-	display: block
+  +flex-wrap
+  $widthText: 27%
+  $widthMain: 100% - $widthText
+  &-wrap
+    position: relative
+  &__text
+    width: $widthText
+    @media (max-width: $xl)
+      width: 100%
+      margin: 50px 0
+    &-desc
+      $fz: 16px
+      $lh: 1.2
+      $m: 20px
+      height: $fz * $lh * 9 + $m * 2 - 1px
+      margin-bottom: 40px
+      line-height: $lh
+      font-size: $fz
+      overflow: hidden
+      p
+        margin: $m 0
+  &__main
+    position: relative
+    width: $widthMain
+    padding-left: 40px
+    @media (max-width: $xl)
+      width: 100%
+      padding-left: 0
+    &-content
+      position: relative
+      padding: 30px 0
+      text-align: center
+      background-color: #fff
+      box-shadow: $shadow
+  &__bg
+    position: absolute
+    bottom: -60px
+    right: -40px
+  &__item
+    +flex-center
+    flex-direction: column
+    width: 25%
+    padding: 15px
+    min-height: 300px
+    font-size: 18px
+    $margin: 25px
+    @media (max-width: $lg)
+      width: 50%
+    @media (max-width: $sm)
+      width: 100%
+    &:hover
+      color: #ffffff
+      background-color: $orange
+      .services__img-black
+        display: none
+      .services__img-white
+        display: block
+      .services__item-hover
+        display: flex
+    &-title
+      margin-bottom: $margin
+      font-weight: 500
+    &-hover
+      display: none
+      position: relative
+      flex-direction: column
+      align-items: center
+      padding-top: $margin
+      font-weight: 700
+      &:after
+        position: absolute
+        content: ''
+        top: 0
+        width: 118px
+        height: 1px
+        background-color: #fff
+  &__img
+    $size: 90px
+    width: $size
+    height: $size
+    +flex-center
+    &-white
+      display: none
