--- a/src/shared/sass/vars.sass
+++ b/src/shared/sass/vars.sass
@@ -7,3 +7,10 @@ $orange: #ce4738
 $main: #2c2f33
 
 $transition: all 0.3s ease
+
+$shadow: -9px 7px 18px rgba(0, 0, 0, 0.1)
+
+$sm: 575px
+$md: 767px
+$lg: 991px
+$xl: 1199px
