--- a/src/components/index/packages/packages.sass
+++ b/src/components/index/packages/packages.sass
@@ -26,6 +26,12 @@
           color: #ffffff
           border: 1px solid $bg
           background-color: $bg
+          &:hover
+            color: $main
+            background-color: #fff
+            border: 1px solid $main
+            span
+              opacity: 1
           span
             opacity: 0.7
     @media (max-width: $md)
