--- a/src/shared/sass/style.sass
+++ b/src/shared/sass/style.sass
@@ -12,7 +12,7 @@ body
   font-family: $gilroy
   color: $main
   font-size: 16px
-  background-color: #f6f4f9
+  background-color: $bg
   overflow: hidden
 
 .main
