--- a/src/shared/sass/typography.sass
+++ b/src/shared/sass/typography.sass
@@ -1,2 +1,14 @@
 .text-center
   text-align: center
+
+.text-right
+  text-align: right
+
+.fz11
+  font-size: 11px
+
+.fz18
+  font-size: 18px
+
+.fw-semi-bold
+  font-weight: 600
