--- a/src/components/index/partners/partners.sass
+++ b/src/components/index/partners/partners.sass
@@ -5,6 +5,8 @@
   @media (max-width: $xl)
     padding-right: 0
   &-wrap
+    position: relative
+    z-index: 1
     padding: 50px 0
     background-color: #fff
   &__title
