--- a/src/shared/sass/buttons.sass
+++ b/src/shared/sass/buttons.sass
@@ -20,13 +20,17 @@
     box-shadow: $shadow
   &-slider
     +btn($orange)
+    position: absolute
+    z-index: 1
     display: inline-flex
     justify-content: center
     align-items: center
-    position: absolute
     width: 42px
     height: 42px
     border-radius: 50%
+    &-black
+      background-color: $bg
+      border: 4px solid #ffffff
   &-white
     color: $main
     background-color: #fff
