--- a/src/shared/sass/elements.sass
+++ b/src/shared/sass/elements.sass
@@ -1,14 +1,16 @@
 @import "imports"
 
 .text-vertical
-  position: absolute
   +flex-center
   $color: $orange
+  position: absolute
   color: $color
   font-size: 12px
   font-weight: 500
   transform-origin: 100%
   transform: rotate(-90deg)
+  @media (max-width: $sm)
+    display: none
   &:after
     position: absolute
     left: calc(100% + 20px)
@@ -42,6 +44,8 @@
   font-size: 34px
   text-transform: uppercase
   font-weight: 900
+  @media (max-width: $sm)
+    font-size: 28px
 
 .circle1
   position: absolute
@@ -49,6 +53,8 @@
   height: 451px
   border: 75px solid #ffffff
   border-radius: 50%
+  @media (max-width: $sm)
+    display: none
 
 .circle2
   position: absolute
@@ -56,3 +62,5 @@
   height: 611px
   border: 105px solid #ffffff
   border-radius: 50%
+  @media (max-width: $sm)
+    display: none
