--- a/src/shared/sass/fonts.sass
+++ b/src/shared/sass/fonts.sass
@@ -57,3 +57,9 @@
   src: url('../fonts/gilroy/Gilroy-Regular.ttf')
   font-weight: 400
   font-style: normal
+
+@font-face
+  font-family: 'MyriadPro'
+  src: url('../fonts/myriad-pro/MyriadPro-Regular.ttf')
+  font-weight: 400
+  font-style: normal
