--- a/src/shared/sass/vars.sass
+++ b/src/shared/sass/vars.sass
@@ -2,9 +2,11 @@ $bebasNeue: 'BebasNeue', sans-serif
 $lato: 'Lato', sans-serif
 $monserrat: 'Monserrat', sans-serif
 $gilroy: 'Gilroy', sans-serif
+$myriad: 'MyriadPro', sans-serif
 
 $orange: #ce4738
 $main: #2c2f33
+$bg: #f6f4f9
 
 $transition: all 0.3s ease
 
