--- a/src/components/index/packages/packages.pug
+++ b/src/components/index/packages/packages.pug
@@ -9,7 +9,7 @@ mixin packages()
             +e.item
               +e('span').item-title УСН доходы
               +e.item-img
-                img(src='assets/images/icons/icon-packages.png')
+                img(src='assets/images/icons/icon-packages.png' alt='')
               +e('span').item-price  2 968 ₽ <span class='month'>мес</span>
               +e('p').item-text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
               button.btn.btn-sm.btn-white.width100
