--- a/src/components/index/partners/partners.pug
+++ b/src/components/index/partners/partners.pug
@@ -11,4 +11,4 @@ mixin partners()
             - if (i > 4) item = i - 4
             - else item = i
             +e.item
-              img(src=`assets/images/partners${item}.png`)
+              img(src=`assets/images/partners${item}.png` alt='')
