--- a/src/components/index/reviews/reviews.pug
+++ b/src/components/index/reviews/reviews.pug
@@ -19,9 +19,9 @@ mixin reviews()
               p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus facere ipsam itaque, labore minima modi nesciunt sequi vel. Iure, placeat.
         +e.img
           +e.img-bg
-            img(src='assets/images/bg/bg-advantages-dots.png')
+            img(src='assets/images/bg/bg-advantages-dots.png' alt='')
           +e.img-slider
             +e.img-slider-item
-              img(src='assets/images/slider-girl.png')
+              img(src='assets/images/slider-girl.png' alt='')
             +e.img-slider-item
-              img(src='assets/images/slider-girl.png')
+              img(src='assets/images/slider-girl.png' alt='')
